feat: add endpoint to create readingPlan